@@ -1,0 +1,6 @@
+	list p=16f73
+
+	org 0x7FFFFFFF
+	movlw 0x12
+	movlw 0x34
+	end
